--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jointjs": "^2.2.1",
     "lodash": "^4.17.11",
     "npm": "^6.4.1",
+    "portal-vue": "^1.5.1",
     "vue": "^2.5.17",
     "vue-drag-drop": "^1.1.4",
     "vue-upload-component": "^2.8.14",
