--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vue-cli-service build",
     "build-bundle": "vue-cli-service build --target lib --name modeler ./src/components/index.js",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "test": "./node_modules/.bin/jest"
   },
   "main": "./dist/modeler.common.js",
   "files": [
@@ -23,6 +24,7 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "@processmaker/vue-form-builder": "^0.3.1",
     "@processmaker/vue-form-elements": "^0.2.3",
+    "@vue/babel-preset-app": "^3.3.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "bpmn-moddle": "^5.1.5",
     "file-saver": "^2.0.0-rc.4",
@@ -32,10 +34,12 @@
     "npm": "^6.4.1",
     "vue": "^2.5.17",
     "vue-drag-drop": "^1.1.4",
+    "vue-jest": "^3.0.2",
     "vue-upload-component": "^2.8.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@processmaker/processmaker-bpmn-moddle": "^0.1.4",
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-plugin-eslint": "^3.0.5",
@@ -60,28 +64,5 @@
     "> 2%",
     "last 2 versions",
     "not ie <= 8"
-  ],
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "jsx",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.vue$": "vue-jest",
-      ".+\\.(css|styl|less|sass|scss|svg|png|jpg|ttf|woff|woff2)$": "jest-transform-stub",
-      "^.+\\.jsx?$": "babel-jest"
-    },
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/src/$1"
-    },
-    "snapshotSerializers": [
-      "jest-serializer-vue"
-    ],
-    "testMatch": [
-      "**/tests/unit/**/*.spec.(js|jsx|ts|tsx)|**/__tests__/*.(js|jsx|ts|tsx)"
-    ],
-    "testURL": "http://localhost/"
-  }
+  ]
 }
