--- a/package.json
+++ b/package.json
@@ -44,7 +44,10 @@
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.0.1",
+    "jest": "^23.6.0",
+    "jest-puppeteer": "^3.8.0",
     "node-sass": "^4.9.4",
+    "puppeteer": "^1.11.0",
     "sass-loader": "^7.0.1",
     "stylelint": "^9.7.0",
     "stylelint-config-recommended-scss": "^3.2.0",
