--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vue-cli-service build",
     "build-bundle": "vue-cli-service build --target lib --name modeler ./src/components/nodes/index.js",
     "lint": "vue-cli-service lint",
-    "test": "vue-cli-service test:e2e",
+    "test": "vue-cli-service test:e2e --headless",
+    "test:e2e": "vue-cli-service test:e2e",
     "test:update": "vue-cli-service test:e2e --env updateSnapshots=true"
   },
   "main": "./dist/modeler.common.js",
